# Thalex-Graphics-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
assets/models/: convert_to_tri.py  main.py  quad_to_tri.py
assets/shaders/: fragment_no_tex.glsl  no_texture.frag  terrain.frag  terrain.vert  vertex.glsl
include/engine/: camera.hpp  engine.hpp  game_object.hpp  material.hpp  mesh.hpp  mesh_renderer.hpp  scene.hpp  shader.hpp  window.hpp
include/glad/: glad.h
include/utils/: utils.hpp
shaders/: fragment.glsl  fragment_no_tex.glsl  vertex.glsl
src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  game_object.cpp  game_object.hpp  main.cpp  mesh.cpp  mesh.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  terrain.cpp  terrain.hpp  transform.hpp  universe.cpp  universe.hpp  utils.cpp  utils.hpp  vessel.cpp  vessel.hpp  window.cpp  window.hpp
src/app/: main.cpp
src/engine/: camera.cpp  engine.cpp  game_object.cpp  material.cpp  mesh.cpp  mesh_renderer.cpp  scene.cpp  shader.cpp  window.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/utils/: utils.cpp
